--- a/YSLib/YSResources.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -486,3 +486,13 @@
 "KeystoneCorrection.Tip" = "單指拉伸進行矯正";
 "KeystoneCorrection.Finish" = "完成";
 "KeystoneCorrection.Reset" = "還原";
+
+"BeautySet.note" = "為了獲得更好的課堂體驗，\n建議打開監視器許可權。";
+"BeautySet.Cam" = "監視器";
+"BeautySet.Cam.HMirror" = "水准鏡像";
+"BeautySet.Cam.VMirror" = "垂直鏡像";
+"BeautySet.Mic" = "麥克風";
+"BeautySet.Speaker" = "揚聲器"；
+"BeautySet.BeautySet" = "美顏設定";
+"BeautySet.Enter" = "進 入";
+
