--- a/YSLib/YSMeetingResources.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/zh-Hans.lproj/Localizable.strings
@@ -481,3 +481,12 @@
 "KeystoneCorrection.Tip" = "单指拉伸进行矫正";
 "KeystoneCorrection.Finish" = "完成";
 "KeystoneCorrection.Reset" = "还原";
+
+"BeautySet.note" = "为了获得更好的课堂体验，\n建议打开摄像头权限。";
+"BeautySet.Cam" = "摄像头";
+"BeautySet.Cam.HMirror" = "水平镜像";
+"BeautySet.Cam.VMirror" = "垂直镜像";
+"BeautySet.Mic" = "麦克风";
+"BeautySet.Speaker" = "扬声器";
+"BeautySet.BeautySet" = "美颜设置";
+"BeautySet.Enter" = "进 入";
