--- a/YSLib/YSMeetingResources.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -483,11 +483,23 @@
 "KeystoneCorrection.Finish" = "完成";
 "KeystoneCorrection.Reset" = "還原";
 
-"BeautySet.note" = "为了获得更好的课堂体验，\n建议打开摄像头权限。";
-"BeautySet.Cam" = "摄像头";
-"BeautySet.Cam.HMirror" = "水平镜像";
-"BeautySet.Cam.VMirror" = "垂直镜像";
-"BeautySet.Mic" = "麦克风";
-"BeautySet.Speaker" = "扬声器";
-"BeautySet.BeautySet" = "美颜设置";
-"BeautySet.Enter" = "进 入";
+"BeautySet.note" = "為了獲得更好的課堂體驗，\n建議打開監視器許可權。";
+"BeautySet.Cam" = "監視器";
+"BeautySet.Cam.HMirror" = "水准鏡像";
+"BeautySet.Cam.VMirror" = "垂直鏡像";
+"BeautySet.Cam.Tip" = "請打開你的監視器許可權";
+"BeautySet.Mic" = "麥克風";
+"BeautySet.Mic.Tip" = "請打開你的麥克風許可權";
+"BeautySet.Speaker" = "揚聲器"；
+"BeautySet.BeautySet" = "美顏設定";
+"BeautySet.Enter" = "進 入";
+
+"BeautySet.Beauty" = "美 顏";
+"BeautySet.Props" = "動畫道具";
+"BeautySet.Reset" = "重置";
+"BeautySet.Whitening" = "美白";
+"BeautySet.ThinFace" = "瘦臉";
+"BeautySet.BigEyes" = "大眼";
+"BeautySet.Exfoliating" = "磨皮";
+"BeautySet.Ruddy" = "紅潤";
+"BeautySet.Back" = "返 回";
