--- a/YSLib/YSMeetingResources.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/zh-Hans.lproj/Localizable.strings
@@ -34,6 +34,7 @@
 "Error.CanNotConnectNetworkError" = "无法连接到服务器，请稍后再试";
 "Error.ServerError" = "服务器访问异常";
 "Error.UpPlatformMemberOverRoomLimit" = "上台人数超出最大限制";
+"Error.ForbiddenEnter" = "禁止进入房间";
 
 //Prompt
 "Prompt.inputPlaceholder" = "请输入房间密码";
