登录网校文案调整

--- a/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
@@ -51,7 +51,7 @@
 "Label.accountNumberPlaceholder" = "Please enter your account number";
 "Label.onlineSchoolSystem" = "Network school system";
 
-"Login.Enter" = "Enter";
+"Login.Enter" = "Login school";
 "Login.EnterRoom" = "Enter room";
 
 "Error.ServerError" = "Server access exception";
