--- a/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hans.lproj/Localizable.strings
@@ -51,7 +51,7 @@
 "Label.accountNumberPlaceholder" = "请输入您的账号";
 "Label.onlineSchoolSystem" = "网校系统";
 
-"Login.Enter" = "登录";
+"Login.Enter" = "登录网校";
 "Login.EnterRoom" = "进入房间";
 
 "Error.ServerError" = "服务器访问异常";
