--- a/YSLib/YSMeetingResources.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/zh-Hans.lproj/Localizable.strings
@@ -35,6 +35,8 @@
 "Error.ServerError" = "服务器访问异常";
 "Error.UpPlatformMemberOverRoomLimit" = "上台人数超出最大限制";
 "Error.ForbiddenEnter" = "禁止进入房间";
+"Error.OpenFileFailed" = "需要关闭当前课件再打开其他课件";
+"Error.OpenUploadFileFailed" = "课件已上传，请在课件库中打开";
 
 //Prompt
 "Prompt.inputPlaceholder" = "请输入房间密码";
