--- a/YSLib/YSResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/en.lproj/Localizable.strings
@@ -35,6 +35,8 @@
 "Error.ServerError" = "Server access exception";
 "Error.UpPlatformMemberOverRoomLimit" = "The number of people on stage exceeded the maximum limit";
 "Error.ForbiddenEnter" = "Forbidden to enter room";
+"Error.OpenFileFailed" = "Need to close the current open other courseware";
+"Error.OpenUploadFileFailed" = "Courseware has been uploaded, please open in  library";
 
 //Prompt
 "Prompt.inputPlaceholder" = "Please input a password";
